[package]
name = "clinku"
version = "0.1.0"
authors = ["ivaaan"]
edition = "2021"
description = "A CLI to interact with the Linku dictionary"

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
colored = "2.0"
clap = "4.0"
