[package]
name = "clinku"
version = "0.1.2"
authors = ["ivaaan"]
edition = "2021"
description = "A CLI to interact with the Linku dictionary"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
colored = "2.0"
clap = "4.0"
textwrap = "0.15"
termsize = "0.1"
